--- a/views/Home.ejs
+++ b/views/Home.ejs
@@ -10,6 +10,7 @@
 <body>
 
   <%- include('./partials/navbar') %>
+    <%= JSON.stringify(user) %>
   <%- include('./partials/scripts') %>
 </body>
 
