--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -11,7 +11,7 @@
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
         <% if (locals.user) { %>
-         
+
           <li class="nav-item">
             <a class="nav-link" href="#">Add Blog</a>
           </li>
@@ -23,7 +23,14 @@
               <li><a class="dropdown-item" href="#">Logout</a></li>
             </ul>
           </li>
-        <% } %>
+          <% } else { %>
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="/user/signup">Create Account</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="/user/signin">Sign In</a>
+            </li>
+            <% }%>
       </ul>
     </div>
   </div>
