--- a/views/Home.ejs
+++ b/views/Home.ejs
@@ -10,7 +10,20 @@
 <body>
 
   <%- include('./partials/navbar') %>
-    <%= JSON.stringify(user) %>
+    <!-- <%= JSON.stringify(blogs) %> -->
+    <div class="container mt-3">
+      <% blogs.forEach(blog => { %>
+        <div class="card" style="width: 18rem;">
+          <img src="<%= blog.coverImageURL %>" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title"><%= blog.title %> </h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+       
+      <% }) %>
+    </div>
   <%- include('./partials/scripts') %>
 </body>
 
