--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -4,18 +4,37 @@
 <head>
 
     <%- include('./partials/head') %>
-    <title>Blog page</title>
+        <title>Blog page</title>
 </head>
 
 <body>
 
     <%- include('./partials/navbar') %>
-     <div class="container">
-        <h1><%= blog.title %></h1>
-        <img src="<%= blog.coverImageURL %>" alt=""/>
-        <p class="mt-5"><%= blog.body %></p>
-     </div>
-    <%- include('./partials/scripts') %>
+        <div class="container">
+            <h1>
+                <%= blog.title %>
+            </h1>
+            <img src="<%= blog.coverImageURL %>" alt="" />
+            <p class="mt-5">
+                <%= blog.body %>
+            </p>
+        </div>
+
+        <div class="container mt-4">
+            <img src="<%= blog.createdBy.profileImageURL %>" width="50px">
+            <%= blog.createdBy.username %>
+        </div>
+
+        <div class="container mt-4">
+            <h1>Comment:</h1>
+            <form action="/user/signin" method="post">
+                <div class="mb-3">
+                    <input type="text" name="content" class="form-control" placeholder="Enter your comment" />
+                    <button class=" mt-4 btn btn-primary" type="submit">Add Comment</button>
+                </div>
+            </form>
+        </div>
+        <%- include('./partials/scripts') %>
 </body>
 
 </html>
